...
                    onSetChanged = { _, _ -> /*TODO*/ },
                    onNavigateToSelectExercise = { onNavigateToSelectExercise(index) }
                )
            }
            item {
                Button(onClick = { viewModel.addExercise() }) {
                    Icon(Icons.Filled.Add, contentDescription = "Add Exercise")
                    Text("Add Exercise")
                }
            }
        }
    }
}
...
