...
import androidx.compose.ui.unit.dp
import com.android.timberworkoutlogs.ui.common.SwipeToDeleteContainer
import com.android.timberworkoutlogs.ui.elements.ContextualScaffold
import com.android.timberworkoutlogs.ui.screen.exercise.components.ExerciseDefinitionCard
import java.util.UUID

const val TEST_TAG = "exercise_list"

@Composable
fun ExerciseListScreen(
    viewModel: ExercisesListViewModel,
    onNavigateToCreateExercise: () -> Unit,
    onNavigateToEditExercise: (UUID) -> Unit,
...

    ContextualScaffold(
        title = { Text("Exercise Library") },
        onNavigateBack = onNavigateBack,
        floatingActionButton = {
            FloatingActionButton(onClick = onNavigateToCreateExercise) {
                Icon(Icons.Filled.Add, contentDescription = "Add Exercise")
            }
        }
    ) { innerPadding ->
        Column(
            modifier = Modifier
                .fillMaxSize()
...
